<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_translator</name>
  <version>1.0.0</version>
  <description>Simple message translator from gps_msgs/msg/GPSFix to sensor_msgs/msg/NavSatFix</description>
  <maintainer email="jakub.codogni@gmail.com">Jakub Codogni</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>launch_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>gps_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
